@@ -8,5 +8,7 @@ menudir = ${datadir}/applications
 menu_DATA = osd-lyrics.desktop
 icondir = ${datadir}/icons/hicolor/64x64/apps
 icon_DATA = osd-lyrics.png
+defaulticondir = @OL_ICONDIR@
+defaulticon_DATA = osd-lyrics.png
 #svgdir = ${datadir}/icons/hicolor/scalable/apps
 #svg_DATA = osd-lyrics.svg
